[package]
name = "lua"
version = "0.1.0"
authors = ["Vincent Moret <moret.vincent@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
log = "0.4"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
env_logger = "0.8"
